# SAFIA

./: .gitignore  AGENTS.md  README.md  admin_dashboard.py  install.ps1  install.sh  main.py  pyproject.toml  run_dev.py
.cursor/rules/: coding-principles.mdc
admin/: __init__.py  routes.py
admin/templates/: base.html  dashboard.html  knowledge.html  settings.html  users.html
bot/: __init__.py  handlers.py  message_helpers.py
config/: __init__.py  prompt.py
scripts/: config.py  setup.py  start_admin_dashboard_prod.sh
services/: __init__.py  chat_history.py  coingecko.py  currency_rate.py  database.py  db.py  db_assets.py  db_debts.py  db_records.py  db_session.py  db_settings.py  db_settings_cli.py  document_vision.py  gold_price.py  habit_analysis.py  llm.py  llm_tools.py  market_prices.py  memory.py  memory_store.py  models.py  news.py  price_cache.py  reminder_runner.py  reminders_db.py  schedule.py  silver_price.py  summaries.py  tools.py  tools_schema.py  usd_idr_rate.py
services/knowledge/: __init__.py  chunking.py  embeddings.py  ingest.py  local_embed.py  parse_document.py  qdrant_kb.py
services/tools/: __init__.py  _helpers.py  assets.py  crypto_market.py  currency.py  debts.py  gold.py  knowledge_search.py  memory.py  news_search.py  prices.py  records.py  reminders.py  silver.py
services/tools/schemas/: __init__.py  assets.py  crypto_market.py  currency.py  debts.py  gold.py  knowledge_search.py  memory.py  news_search.py  prices.py  records.py  reminders.py  silver.py
tests/: test_config.py  test_helpers.py  test_schedule.py  test_summaries.py  test_tool_builders.py
utils/: __init__.py  records.py
