[project]
name = "safia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.26.0",
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "beautifulsoup4>=4.12.0",
    "scrapling[fetchers]>=0.4.2",
    "tvscreener>=0.2.0",
    "flask>=3.1.3",
    "qdrant-client>=1.12.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
]

[dependency-groups]
dev = [
    "watchfiles>=1.1.1",
]
