[project]
name = "safia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.26.0",
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.0",
    "requests>=2.31.0",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "beautifulsoup4>=4.12.0",
    "scrapling[fetchers]>=0.4.2",
    "tvscreener>=0.2.0",
    "flask>=3.1.3",
    "qdrant-client>=1.12.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "pydantic-core>=2.44.0",
    "fastembed>=0.8.0",
    "firecrawl-py>=4.28.2",
    "telegramify-markdown>=1.1.5",
]

[dependency-groups]
dev = [
    "watchfiles>=1.1.1",
    "pytest>=8.0.0",
]
prod = [
    "gunicorn>=23.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::UserWarning:firecrawl.*",
]
